syntax = "proto3";
package user;
option go_package = "./proto";

message UserMessage {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string avatar = 5;
}

service UserService {
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc VerifyCode(VerifyCodeRequest) returns (VerifyCodeResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ChangeEmail(ChangeEmailRequest) returns (ChangeEmailResponse);
  rpc ChangeAvatar(ChangeAvatarRequest) returns (ChangeAvatarResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message ResetPasswordRequest {
  string email = 1;
}

message ResetPasswordResponse {
  bool success = 1;
  string message = 2;
}

message VerifyCodeRequest {
  string email = 1;
  string verification_code = 2;
}

message VerifyCodeResponse {
  bool success = 1;
  string message = 2;
}

message ChangePasswordRequest {
  string email = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

message ChangeEmailRequest {
  string email = 1;
  string new_email = 2;
}

message ChangeEmailResponse {
  bool success = 1;
  string message = 2;
}

message ChangeAvatarRequest {
  string email = 1;
  bytes avatar_data = 2;
}

message ChangeAvatarResponse {
  bool success = 1;
  string message = 2;
}

message LogoutRequest {
  string email = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// Добавляем новые сообщения для входа в систему
message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
  string timezone = 5;
}

message RegisterResponse {
  bool success = 1;
}
